###############################################################################
# Licensed Materials - Property of IBM
# ZOSLIB
# (C) Copyright IBM Corp. 2021. All Rights Reserved.
# US Government Users Restricted Rights - Use, duplication
# or disclosure restricted by GSA ADP Schedule Contract with IBM Corp.
###############################################################################

config("zoslib_config") {
  include_dirs = [
    "include",
  ]
  # min arch14 is required for zos-getentropy.cc to use PRNO instruction.
  cflags = [
    "-march=arch14",
    "-fno-short-enums",
    "-fzos-le-char-mode=ascii",
  ]
}

shared_library("zoslib") {
  output_name = "zoslib"

  sources = [
    "src/zos-bpx.cc",
    "src/zos-char-util.cc",
    "src/zos-getentropy.cc",
    "src/zos-io.cc",
    "src/zos-semaphore.cc",
    "src/zos-spawn.cc",
    "src/zos-sys-info.cc",
    "src/zos-tls.cc",
    "src/zos.cc",
    "src/zoslib-help.cc",
    "include/csrsic.h",
    "include/fcntl.h",
    "include/limits.h",
    "include/mntent.h",
    "include/netdb.h",
    "include/zos-sys-info.h",
    "include/zos-tls.h",
    "include/zos-v2r5-symbolfixes.h",
    "include/zos-getentropy.h",
    "include/signal.h",
    "include/spawn.h",
    "include/zos-char-util.h",
    "include/stdio.h",
    "include/stdlib.h",
    "include/string.h",
    "include/sys/epoll.h",
    "include/sys/eventfd.h",
    "include/sys/fsstat.h",
    "include/sys/inotify.h",
    "include/sys/mount.h",
    "include/sys/param.h",
    "include/sys/socket.h",
    "include/sys/stat.h",
    "include/sys/sysmacros.h",
    "include/sys/time.h",
    "include/sys/types.h",
    "include/time.h",
    "include/zos-base.h",
    "include/utmpx.h",
    "include/zos-bpx.h",
    "include/zos-io.h",
    "include/zos-macros.h",
    "include/zos-semaphore.h",
    "include/unistd.h",
    "include/zos-savstack.h",
    "include/edcwccwi.h",
    "include/zos.h",
  ]

  configs += [ ":zoslib_config" ]
}
