###############################################################################
# Licensed Materials - Property of IBM
# ZOSLIB
# (C) Copyright IBM Corp. 2021. All Rights Reserved.
# US Government Users Restricted Rights - Use, duplication
# or disclosure restricted by GSA ADP Schedule Contract with IBM Corp.
###############################################################################

config("zoslib_config") {
  include_dirs = [
    "include",
    "include/c++/v1",
  ]
  # min arch14 is required for zos-getentropy.cc to use PRNO instruction.
  cflags = [
    "-faligned-allocation",
    "-fno-short-enums",
    "-fzos-le-char-mode=ascii",
    "-m64",
    "-march=arch14",
    "-mzos-target=zosv2r4",
  ]
}

shared_library("zoslib") {
  output_name = "zoslib"

  sources = [
    "include/csrsic.h",
    "include/edcwccwi.h",
    "include/zos.h",
    "include/zos-base.h",
    "include/zos-bpx.h",
    "include/zos-char-util.h",
    "include/zos-getentropy.h",
    "include/zos-io.h",
    "include/zos-savstack.h",
    "include/zos-semaphore.h",
    "include/zos-setlibpath.h",
    "include/zos-sys-info.h",
    "include/zos-tls.h",
    "src/zos.cc",
    "src/zos-aligned-newdel.cc",
    "src/zos-bpx.cc",
    "src/zos-char-util.cc",
    "src/zos-getentropy.cc",
    "src/zos-io.cc",
    "src/zos-locale.cc",
    "src/zos-mkdtemp.c",
    "src/zos-mount.c",
    "src/zos-semaphore.cc",
    "src/zos-spawn.cc",
    "src/zos-string.c",
    "src/zos-sys-info.cc",
    "src/zos-tls.cc",
  ]

  configs += [ ":zoslib_config" ]
}
